cmake_minimum_required(VERSION 3.19)
project(HeartStoneCalculator)

set(CMAKE_CXX_STANDARD 14)

add_executable(HeartStoneCalculator main.cpp card/Card.h card/Handle.h card/Property.h card/SpiritOfTheSharkCard.h card/CardList.h calculator/PlayCardCheckUp.h calculator/Calculator.h card/SpectralPillagerCard.h card/ScabbsCutterbutterCard.h card/FoxyFraudCard.h card/CoinCard.h card/ShadowStepCard.h util/util.h card/TenwuOfTheRedSmokeCard.h card/MailboxDancerCard.h card/PotionOfIllusionCard.h)